# try_calculator

./: README.md  pyproject.toml
scic/: __init__.py  operations.py
test/: test_operations.py
