[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scic"
version = "0.1.0"
description = "A small scientific calculator using Numpy"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Manuel"}]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.22,<2.0"
]